PolyPage Change Log

0.6.0 (dev)

* PolyPage can now be intialized on a jQuery collection using the $(selector).polypage() syntax. the matched elements are used as the container for the navigation controls. This is now the recommended way to initialize jQuery although the $.polypage.init() method still works for backwards compatibility at the moment. (Thanks to Phil Oye)
* Some refactoring of cookie support and setState();
* Fixes a bug where setting a cookie and a hash in the url to both be on would cause an infinite loop of toggling.
* Added a customizable label to make it clear the toggles are page states, use the 'label' option to change. (Thanks to Phil Oye)
* Increased the specificity of the CSS selectors so they are unlikely to be affected by other page styling.
* If no PolyPage elements exist on a page then we now avoid adding an empty toggle box to the page. (thanks to Phil Oye for the suggestion)

0.5.1

* Upgraded to work with jQuery 1.3.x
* Fixed a CSS typo

0.5

* Regex improvements
* Support for numbers in state names.
* Safari 3 support.
* Alphabetically sort states in the toggle list to avoid confusing users with changing orders across different pages. 
* IE6 support.
* Anchor the toggles to the top of the html rather than the viewport.


0.4

* Fixed a major bug with cookies, all cookies are now scoped to the root of the domain. (thanks Nat)


0.3

* Added cookie support.
* Wrapped the plugin in a closure.
* Added MIT & GPL Licenses.


0.2

* Upgraded jQuery.
* Fixed some false negative results.
* Made the syntax slightly easier.


0.1

* Initial release.