@@ -25,6 +25,7 @@
 		states: null,
 		
 		options: {
+		  prefix: 'pp',
 		  label: "Page States:"
 		},
 
@@ -78,13 +79,15 @@
 
 		extractDataFromClassName: function(className){
 			var classes = className.split(' ');
-			for(var i in classes)
-			if(classes[i].match(/^pp_/)) return classes[i].replace(/^pp_/,'');
+			for(var i in classes) {
+			  var matcher = new RegExp('^'+this.options.prefix+'_');
+			  if(matcher.test(classes[i])) return classes[i].replace(matcher,'');
+			}
 			return '';
 		},
 
 		findAll: function(){
-			return $("*[class*='pp_']");
+			return $("*[class*='"+this.options.prefix+"_']");
 		},
 		
 		pageHasPPElements: function() {
@@ -109,7 +112,6 @@
 
 		evaluate: function(input){
 			var str = input
-			.replace(/^pp_/gi,'')
 			.replace(/_and_/gi,' && ')
 			.replace(/_or_/gi,' || ')
 			.replace(/_?not_/gi,' !')
